【工程重构】重构了Key，引入了模板特化以适配裸机和RTOS。整理了静态库的链接关系

--- a/BSP/CMakeLists.txt
+++ b/BSP/CMakeLists.txt
@@ -18,6 +18,7 @@ endif ()
 set(ADDED_COMPONENTS "" CACHE INTERNAL "List of added components")
 set(BSP_SRCS "" CACHE INTERNAL "List of BSP source files")
 set(BSP_INC_DIRS "${DRIVERS_INC_DIRS}" CACHE INTERNAL "List of BSP header dirs")
+#message(STATUS "BSP:${BSP_INC_DIRS}")
 
 
 # 递归解析依赖
