--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,7 +33,8 @@ include(cmake/structure/projects.cmake)
 
 # 定义一个可执行文件目标，生成了 ELF 文件
 add_executable(${PROJECT_NAME}.elf ${SOURCES}
-        Adapter/GUI/Component/inc/roller.hpp)
+        Adapter/GUI/Component/inc/roller.hpp
+        Adapter/GUI/Component/inc/dropdown.hpp)
 
 
 # 导入模块
