【驱动开发】lvgl图表和WaveDraw的对比

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,7 +34,8 @@ include(cmake/structure/projects.cmake)
 # 定义一个可执行文件目标，生成了 ELF 文件
 add_executable(${PROJECT_NAME}.elf ${SOURCES}
         Adapter/GUI/Component/inc/roller.hpp
-        Adapter/GUI/Component/inc/dropdown.hpp)
+        Adapter/GUI/Component/inc/dropdown.hpp
+        Adapter/GUI/Render/WaveDraw.hpp)
 
 
 # 导入模块
