【驱动开发】common_functions.cmake中加入DMA_SPI_ENABLE的开启函数

--- a/Projects/shared/common_config.h.in
+++ b/Projects/shared/common_config.h.in
@@ -45,7 +45,8 @@
 #define FREQ_168M_to_256x16K  4,19  // 168MHz -> 256*16KHz
 
 /*****************************功能宏********************************/
-
+// ---------配置项-----------
+#cmakedefine DMA_SPI_ENABLE
 
 
 
