--- a/Projects/shared/common_config.h.in
+++ b/Projects/shared/common_config.h.in
@@ -47,8 +47,9 @@
 /*****************************功能宏********************************/
 // ---------配置项-----------
 #cmakedefine DMA_SPI_ENABLE
-
-
+#cmakedefine SD_SPI_ENABLE
+#cmakedefine LCD_8080_PORT_ENABLE
+#cmakedefine LCD_SPI_PORT_ENABLE
 
 #define SECTION(name) __attribute__((section(name)))
 
