【驱动开发】待合并版本4 把启动DMA FSMC的宏写好了

--- a/Projects/shared/common_config.h.in
+++ b/Projects/shared/common_config.h.in
@@ -47,6 +47,7 @@
 /*****************************功能宏********************************/
 // ---------配置项-----------
 #cmakedefine DMA_SPI_ENABLE
+#cmakedefine DMA_FSMC_ENABLE
 #cmakedefine SD_SPI_ENABLE
 #cmakedefine LCD_8080_PORT_ENABLE
 #cmakedefine LCD_SPI_PORT_ENABLE
