【驱动开发】去除了FPGA代码

--- a/BSP/CMakeLists.txt
+++ b/BSP/CMakeLists.txt
@@ -99,4 +99,4 @@ configure_file(
         ${DRIVERS_DIR}/stm32f4xx_hal_conf.h
 )
 
-#message(STATUS "BSP_SRCS--:${BSP_SRCS}")
+message(STATUS "BSP_SRCS--:${BSP_SRCS}")
