【驱动开发】优化了bsp文件映射

--- a/BSP/CMakeLists.txt
+++ b/BSP/CMakeLists.txt
@@ -68,11 +68,22 @@ function(add_driver_component comp)
         endforeach ()
 
         # 添加源文件
-        if (${comp}_SRC)
-            #            target_sources(bsp PRIVATE ${${comp}_SRCS})
-            list(APPEND BSP_SRCS ${${comp}_SRC})
-            set(BSP_SRCS "${BSP_SRCS}" CACHE INTERNAL "List of BSP source files")
+        string(FIND "${comp}" "hal_" HAL_POSITION)
+        string(FIND "${comp}" "ll_" LL_POSITION)
+        if(HAL_POSITION GREATER -1 OR LL_POSITION GREATER -1 OR "${comp}" STREQUAL "hal")
+            # 包含hal
+            if (${comp}_SRC)
+                list(APPEND BSP_SRCS ${${comp}_SRC})
+            endif ()
+        else ()
+            set(bsp_src "${CMAKE_CURRENT_SOURCE_DIR}/src/${comp}.c")
+            if (EXISTS "${bsp_src}")
+                list(APPEND BSP_SRCS ${bsp_src})
+            else ()
+                message(STATUS "|ignore|:${comp}")
+            endif ()
         endif ()
+        set(BSP_SRCS "${BSP_SRCS}" CACHE INTERNAL "List of BSP source files")
     endif ()
 endfunction()
 
